[tool.poetry]
name = "zcta-data-table"
version = "0.1.0"
description = "A project to compile ZCTA-level data for city, state, income, crime, and sunlight hours"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.0"
geopandas = "^1.0.0"
requests = "^2.32.0"
numpy = "^1.26.0"
shapely = "^2.0.0"
tqdm = "^4.66.0"  # Added for progress bars
graphviz = "^0.20.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"